# griptape-statemachine

./: pyproject.toml
examples/joke_machine/: config.yaml  joke_machine.py
examples/research_machine/: config.yaml  research_machine.py  research_workflow.py  test_base_machine.py  webscrape_workflow.py  websearch_workflow.py
examples/research_machine/workflows/: webscrape_workflow.py  websearch_workflow.py
griptape_statemachine/machines/: base_machine.py
griptape_statemachine/parsers/: base_parser.py  config_parser.py
